--- a/todo-app/todo-api-java/src/main/resources/application-development.yml
+++ b/todo-app/todo-api-java/src/main/resources/application-development.yml
@@ -20,3 +20,7 @@ azure:
     active-directory-groups: group1,group2
     client-id: ${AZURE_APP_ID}
     client-secret: ${AZURE_CLIENT_SECRET}
+
+api:
+  user:
+    baseUrl: http://localhost:8082
