added memory resource utlization

--- a/deployments/hpa.v2beta1.yml
+++ b/deployments/hpa.v2beta1.yml
@@ -16,4 +16,8 @@ spec:
   - type: Resource
     resource:
       name: cpu
-      targetAverageUtilization: 50
+      targetAverageUtilization: 50 # % utilization
+  - type: Resource
+    resource:
+      name: memory
+      targetAverageUtilization: 75
