--- a/deployments/php-apache-deployment.yml
+++ b/deployments/php-apache-deployment.yml
@@ -39,5 +39,6 @@ spec:
         resources:
           requests:
             cpu: 200m
+            memory: 200Mi
         ports:
         - containerPort:  80
