Add test mode support

--- a/todo-app/todo-api-java/src/main/resources/application-development.yml
+++ b/todo-app/todo-api-java/src/main/resources/application-development.yml
@@ -23,4 +23,6 @@ azure:
 
 api:
   user:
-    baseUrl: http://localhost:8082
+    baseUrl: ${USER_API_BASE_URL}
+  todo:
+    isTestMode: ${IS_TEST_MODE}
