--- a/todo-app/todo-ui/package.json
+++ b/todo-app/todo-ui/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "adal-vanilla": "^1.0.14",
     "axios": "^0.17.1",
     "bootstrap": "3",
     "cross-fetch": "^1.1.1",
@@ -12,6 +13,7 @@
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
     "react-select": "^1.1.0",
     "redux": "^3.7.2",
