--- a/storage/task-pv-pod.yml
+++ b/storage/task-pv-pod.yml
@@ -1,5 +1,6 @@
 # From the task at K8S.io https://kubernetes.io/docs/tasks/configure-pod-container/configure-persistent-volume-storage/
-
+# Cluster User role would define the Pod resource (actually a Deployment that has a Pod template)
+# Note how the 'volumes' attribute has a 'persistentVolumeClaim' attribute.
 kind: Pod
 apiVersion: v1
 metadata:
