--- a/todo-app/todo-api-java/docker-compose.test.yml
+++ b/todo-app/todo-api-java/docker-compose.test.yml
@@ -17,6 +17,8 @@ services:
       ALLOWED_ORIGINS: '*'
       AZURE_APP_ID: 'ADD APP ID HERE'
       AZURE_CLIENT_SECRET: 'ADD AZURE CLIENT SECRET HERE'
+      USER_API_BASE_URL: 'http://user-api:8082'
+      IS_TEST_MODE: 'false'
     depends_on:
       - mongodb
       - user-api
