--- a/helm/architech/todo-app/templates/ui-service.yaml
+++ b/helm/architech/todo-app/templates/ui-service.yaml
@@ -1,11 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: todo-web-ui
+  name: {{.Values.WebUI.ServiceName}}
+  namespace: {{.Values.General.NameSpace}}
 spec:
   type: LoadBalancer
   ports:
   - port: {{ .Values.WebUI.ServicePort }}
   selector:
     tier: frontend
+    app: {{.Values.WebUI.Name}}
     environment: {{.Values.General.Environment}}
