--- a/todo-app/todo-api-java/docker-compose.build.yml
+++ b/todo-app/todo-api-java/docker-compose.build.yml
@@ -14,10 +14,10 @@ services:
       SPRING_LOG_LEVEL: INFO
       APP_LOG_LEVEL: DEBUG
       ALLOWED_ORIGINS: '*'
-      AZURE_APP_ID: 'ADD APP ID HERE'
-      AZURE_CLIENT_SECRET: 'ADD AZURE CLIENT SECRET HERE'
+      AZURE_APP_ID: ${AZURE_APP_ID}
+      AZURE_CLIENT_SECRET: ${AZURE_CLIENT_SECRET}
       USER_API_BASE_URL: 'http://user-api:8082'
-      IS_TEST_MODE: 'false'
+      IS_TEST_MODE: ${IS_TEST_MODE}
     depends_on:
       - mongodb
       - user-api
