--- a/todo-app/user-api/docker-compose.build.yml
+++ b/todo-app/user-api/docker-compose.build.yml
@@ -10,10 +10,11 @@ services:
     ports:
       - '8082:8082'
     environment:
-      IS_TEST_MODE: 'false'
       MONGODB_URL: 'mongodb://user-api-mongodb:27017/user-api'
-      LOG_LEVEL: info
+      IS_TEST_MODE: 'false'
+      APP_LOG_LEVEL: info
+      AZURE_APP_ID: '${AZURE_APP_ID}'
       AZURE_IDENTITY_META_DATA: 'https://login.microsoftonline.com/architech.onmicrosoft.com/v2.0/.well-known/openid-configuration'
-      AZURE_CLIENT_ID: '${AZURE_APP_ID}'
+      
     depends_on:
       - user-api-mongodb
