--- a/todo-app/todo-api-java/docker-compose.yml
+++ b/todo-app/todo-api-java/docker-compose.yml
@@ -15,8 +15,8 @@ services:
     environment:
       IS_TEST_MODE: '${IS_TEST_MODE:-false}'
       MONGODB_URL: 'mongodb://user-api-mongodb:27017/user-api'
-      LOG_LEVEL: info
+      APP_LOG_LEVEL: info
       AZURE_IDENTITY_META_DATA: 'https://login.microsoftonline.com/architech.onmicrosoft.com/v2.0/.well-known/openid-configuration'
-      AZURE_CLIENT_ID: '${AZURE_APP_ID}'
+      AZURE_APP_ID: '${AZURE_APP_ID}'
     depends_on:
       - user-api-mongodb
