--- a/todo-app/user-api/docker-compose.build.yml
+++ b/todo-app/user-api/docker-compose.build.yml
@@ -11,10 +11,10 @@ services:
       - '8082:8082'
     environment:
       MONGODB_URL: 'mongodb://user-api-mongodb:27017/user-api'
-      IS_TEST_MODE: 'false'
-      APP_LOG_LEVEL: info
+      IS_TEST_MODE: '${IS_TEST_MODE}'
+      APP_LOG_LEVEL: '${APP_LOG_LEVEL}'
       AZURE_APP_ID: '${AZURE_APP_ID}'
-      AZURE_IDENTITY_META_DATA: 'https://login.microsoftonline.com/architech.onmicrosoft.com/v2.0/.well-known/openid-configuration'
+      AZURE_IDENTITY_META_DATA: '${AZURE_IDENTITY_META_DATA}'
       
     depends_on:
       - user-api-mongodb
