--- a/todo-app/todo-ui/nginx.conf
+++ b/todo-app/todo-ui/nginx.conf
@@ -9,17 +9,17 @@ server {
     location /api/todos/ {
         proxy_pass http://todo-api:8080/api/todos/;
         proxy_set_header Host $host;
-        proxy_redirect default;
+        break;
     }
 
     location /api/user/ {
         proxy_pass http://user-api:8082/api/user/;
         proxy_set_header Host $host;
-        proxy_redirect default;
+        break;
     }
 
     location / {
-        try_files $uri /index.html = 404;
+        try_files $uri $uri/ /index.html;
     }
 
     #error_page  404              /404.html;
