--- a/todo-app/todo-ui/Dockerfile
+++ b/todo-app/todo-ui/Dockerfile
@@ -25,11 +25,14 @@ WORKDIR /app
 # copy production build output from build node
 COPY --from=build /root/todo-app/build .
 
-COPY ./nginx.conf /etc/nginx/conf.d/default.conf
+COPY ./nginx.conf /etc/nginx/conf.d/default.conf.template
 
 STOPSIGNAL SIGTERM
 
+# Empty config array
+ENV APP_CONF "config={}"
+
 # run nginx
-CMD ["nginx", "-g", "daemon off;"]
+CMD envsubst '\$APP_CONF' < /etc/nginx/conf.d/default.conf.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'
 
 
