--- a/todo-app/todo-ui/docker-compose.build.yml
+++ b/todo-app/todo-ui/docker-compose.build.yml
@@ -11,3 +11,7 @@ services:
       - "80:80"
     depends_on:
       - todo-api
+      - user-api
+    environment:
+      - AZURE_APP_ID=${AZURE_APP_ID}
+      - IS_TEST_MODE=${IS_TEST_MODE:-false}
