--- a/todo-app/todo-ui/docker-compose.override.yml
+++ b/todo-app/todo-ui/docker-compose.override.yml
@@ -3,10 +3,11 @@ version: '3'
 services:
   nginx:
     image: 'nginx:1.13.7'
+    command: /bin/bash -c "envsubst '$$AZURE_APP_ID $$IS_TEST_MODE' < /etc/nginx/conf.d/default.conf.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
     ports:
       - '80:80'
     volumes:
-      - './nginx.conf:/etc/nginx/conf.d/default.conf'
+      - './nginx.conf:/etc/nginx/conf.d/default.conf.template'
     depends_on:
       - todo-api
       - user-api
@@ -23,8 +24,11 @@ services:
       MONGODB_URL: 'mongodb:27017'
       SPRING_LOG_LEVEL: INFO
       APP_LOG_LEVEL: DEBUG
-      AZURE_APP_ID: 'ADD APP ID HERE'
+      AZURE_APP_ID: '${AZURE_APP_ID}'
       AD_IDENTITY_META_DATA_URL: 'https://login.microsoftonline.com/architech.onmicrosoft.com/v2.0/.well-known/openid-configuration='
+      AZURE_CLIENT_SECRET: '${AZURE_CLIENT_SECRET}'
+      IS_TEST_MODE: '${IS_TEST_MODE:-false}'
+      USER_API_BASE_URL: http://user-api:8082
   user-api-mongodb:
     ports:
       - '27018:27017'
@@ -35,11 +39,11 @@ services:
     ports:
       - '8082:8082'
     environment:
-      IS_TEST_MODE: '${TEST_MODE:-false}'
+      IS_TEST_MODE: '${IS_TEST_MODE:-false}'
       MONGODB_URL: 'mongodb://user-api-mongodb:27017/user-api'
       LOG_LEVEL: info
       AZURE_IDENTITY_META_DATA: 'https://login.microsoftonline.com/architech.onmicrosoft.com/v2.0/.well-known/openid-configuration'
-      AZURE_CLIENT_ID: '${AZURE_APP_ID:-12345}'
+      AZURE_APP_ID: '${AZURE_APP_ID}'
 volumes:
   todo-app-data:
     external: false
