--- a/todo-app/todo-ui/nginx.conf
+++ b/todo-app/todo-ui/nginx.conf
@@ -5,17 +5,20 @@ server {
 
     location /api/todos/ {
         proxy_pass http://todo-api:8080/api/todos/;
+        proxy_redirect off;
         break;
     }
 
     location /api/user/ {
         proxy_pass http://user-api:8082/api/user/;
+        proxy_redirect off;
         break;
     }
 
     location / {
         try_files $uri $uri/ /index.html;
-        add_header "Set-Cookie" '${APP_CONF}';
+        add_header "Set-Cookie" 'AZURE_APP_ID=${AZURE_APP_ID}';
+        add_header "Set-Cookie" 'TEST_MODE=${IS_TEST_MODE}';
     }
 
 }
