--- a/todo-app/todo-ui/package.json
+++ b/todo-app/todo-ui/package.json
@@ -15,6 +15,7 @@
     "cross-fetch": "^1.1.1",
     "express": "^4.16.2",
     "jasmine-spec-reporter": "^4.2.1",
+    "js-cookie": "^2.2.0",
     "lodash": "^4.17.4",
     "moment": "^2.19.2",
     "protractor": "^5.2.2",
