--- a/todo-app/todo-ui/docker-compose.build.yml
+++ b/todo-app/todo-ui/docker-compose.build.yml
@@ -15,3 +15,29 @@ services:
     environment:
       - AZURE_APP_ID=${AZURE_APP_ID}
       - IS_TEST_MODE=${IS_TEST_MODE:-false}
+  todo-api:
+    environment:
+      MONGODB_URL: 'mongodb:27017'
+      SPRING_LOG_LEVEL: INFO
+      APP_LOG_LEVEL: DEBUG
+      AZURE_APP_ID: '${AZURE_APP_ID}'
+      AD_IDENTITY_META_DATA_URL: 'https://login.microsoftonline.com/architech.onmicrosoft.com/v2.0/.well-known/openid-configuration='
+      AZURE_CLIENT_SECRET: '${AZURE_CLIENT_SECRET}'
+      IS_TEST_MODE: '${IS_TEST_MODE:-false}'
+      USER_API_BASE_URL: http://user-api:8082
+  user-api-mongodb:
+    volumes:
+      - 'user-api-data:/data/db'
+      - 'user-api-config-data:/data/config'
+  user-api:
+    environment:
+      IS_TEST_MODE: '${IS_TEST_MODE:-false}'
+      MONGODB_URL: 'mongodb://user-api-mongodb:27017/user-api'
+      LOG_LEVEL: info
+      AZURE_IDENTITY_META_DATA: 'https://login.microsoftonline.com/architech.onmicrosoft.com/v2.0/.well-known/openid-configuration'
+      AZURE_APP_ID: '${AZURE_APP_ID}'
+volumes:
+  user-api-data:
+    external: false
+  user-api-config-data:
+    external: false
