--- a/helm/architech/todo-app/values.yaml
+++ b/helm/architech/todo-app/values.yaml
@@ -8,12 +8,14 @@ General:
   Version : 1.0
   Environment: prod
   NameSpace: todoapp
+  IsTesting: "true"
+  LogLevel: INFO
 
 WebUI:
   Name: web-ui
   ServiceName: todo-webui-service
   Image: "architechbootcamp/todo-ui"
-  ImageTag: "v0.2"
+  ImageTag: "v0.3"
   Replicas: 1
   ServicePort: 80
   ContainerPort: 80
@@ -22,15 +24,36 @@ TodoAPI:
   Name: todo-api
   ServiceName: todo-api
   Image: "architechbootcamp/todo-api"
-  ImageTag: "v0.2"
+  ImageTag: "v0.3"
   Replicas: 1
   ServicePort: 8080
   ContainerPort: 8080
+  ConfigName: todoapi-config
+  SecretName: todoapp-secrets
 
-Mongo:
-  Name: mongo
-  ServiceName: mongodb
+TodoMongo:
+  Name: todo-mongo
+  ServiceName: todo-mongodb
   Image: "mongo"
   Replicas: 1
   ServicePort: 27017
+  ContainerPort: 27017
+
+UserAPI:
+  Name: user-api
+  ServiceName: user-api
+  Image: "architechbootcamp/user-api"
+  ImageTag: "v0.3"
+  Replicas: 1
+  ServicePort: 8081
+  ContainerPort: 8080
+  ConfigName: userapi-config
+  SecretName: todoapp-secrets
+
+UserMongo:
+  Name: user-mongo
+  ServiceName: user-mongodb
+  Image: "mongo"
+  Replicas: 1
+  ServicePort: 27018
   ContainerPort: 27017
