Adding user api service & other fixes

--- a/helm/architech/todo-app/templates/todo-api.yaml
+++ b/helm/architech/todo-app/templates/todo-api.yaml
@@ -60,6 +60,11 @@ spec:
                 configMapKeyRef:
                   name: {{.Values.TodoAPI.ConfigName}}
                   key: app_log_level
+            - name: USER_API_BASE_URL
+              valueFrom:
+                configMapKeyRef:
+                  name: {{.Values.TodoAPI.ConfigName}}
+                  key: user_api_url
             - name: ALLOWED_ORIGINS
               valueFrom:
                 configMapKeyRef:
