--- a/helm/architech/todo-app/templates/todo-config.yaml
+++ b/helm/architech/todo-app/templates/todo-config.yaml
@@ -9,5 +9,5 @@ data:
   app_log_level: {{.Values.General.LogLevel}}
   spring_log_level: {{.Values.General.LogLevel}}
   allowed_origins: "*" 
-  user_api_URL: {{.Values.UserAPI.ServiceName}}:{{.Values.UserAPI.ServicePort}}
+  user_api_url: {{.Values.UserAPI.ServiceName}}:{{.Values.UserAPI.ServicePort}}
 
