--- a/helm/architech/todo-app/values.yaml
+++ b/helm/architech/todo-app/values.yaml
@@ -8,14 +8,14 @@ General:
   Version : 1.0
   Environment: prod
   NameSpace: todoapp
-  IsTesting: "true"
+  IsTesting: false
   LogLevel: INFO
 
 WebUI:
   Name: web-ui
   ServiceName: todo-webui-service
   Image: "architechbootcamp/todo-ui"
-  ImageTag: "v0.3"
+  ImageTag: "v0.4"
   Replicas: 1
   ServicePort: 80
   ContainerPort: 80
@@ -24,7 +24,7 @@ TodoAPI:
   Name: todo-api
   ServiceName: todo-api
   Image: "architechbootcamp/todo-api"
-  ImageTag: "v0.3"
+  ImageTag: "v0.4"
   Replicas: 1
   ServicePort: 8080
   ContainerPort: 8080
@@ -43,7 +43,7 @@ UserAPI:
   Name: user-api
   ServiceName: user-api
   Image: "architechbootcamp/user-api"
-  ImageTag: "v0.3"
+  ImageTag: "v0.4"
   Replicas: 1
   ServicePort: 8081
   ContainerPort: 8080
