--- a/todo-app/todo-api-java/docker-compose.yml
+++ b/todo-app/todo-api-java/docker-compose.yml
@@ -2,6 +2,8 @@ version: '3'
 services:
   mongodb:
     image: mongo
+    ports:
+      - '27017:27017'
   user-api-mongodb:
     image: mongo
     ports:
