--- a/todo-app/todo-api-java/src/main/resources/application-development.yml
+++ b/todo-app/todo-api-java/src/main/resources/application-development.yml
@@ -3,7 +3,7 @@ server:
 spring:
   data:
     mongodb:
-      uri: mongodb://${MONGODB_URL}
+      uri: mongodb://${MONGODB_URL:localhost:27017}
       database: todo-app
   jackson:
     serialization:
@@ -12,8 +12,8 @@ spring:
 logging:
   level:
     root: WARN
-    org.springframework.web: ${SPRING_LOG_LEVEL}
-    ca.architech: ${APP_LOG_LEVEL}
+    org.springframework.web: ${SPRING_LOG_LEVEL:debug}
+    ca.architech: ${APP_LOG_LEVEL:debug}
 
 azure:
   activedirectory:
@@ -23,6 +23,6 @@ azure:
 
 api:
   user:
-    baseUrl: ${USER_API_BASE_URL}
+    baseUrl: ${USER_API_BASE_URL:http://localhost:8082}
   todo:
-    isTestMode: ${IS_TEST_MODE}
+    isTestMode: ${IS_TEST_MODE:false}
