Azure AD tenant is configurable in todo-ui.
The AD tenant needs to be configurable for custom AD instances.

--- a/todo-app/todo-ui/nginx.conf
+++ b/todo-app/todo-ui/nginx.conf
@@ -19,6 +19,7 @@ server {
         try_files $uri $uri/ /index.html;
         add_header "Set-Cookie" 'AZURE_APP_ID=${AZURE_APP_ID}';
         add_header "Set-Cookie" 'TEST_MODE=${IS_TEST_MODE}';
+        add_header "Set-Cookie" 'AZURE_AD_TENANT=${AZURE_AD_TENANT}';
     }
 
 }
