--- a/todo-app/todo-ui/Dockerfile
+++ b/todo-app/todo-ui/Dockerfile
@@ -34,6 +34,6 @@ ENV AZURE_APP_ID ""
 ENV IS_TEST_MODE "false"
 
 # run nginx
-CMD envsubst '\$AZURE_APP_ID \$IS_TEST_MODE' < /etc/nginx/conf.d/default.conf.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'
+CMD envsubst '\$AZURE_APP_ID \$IS_TEST_MODE \$AZURE_AD_TENANT' < /etc/nginx/conf.d/default.conf.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'
 
 
