--- a/todo-app/todo-ui/docker-compose.override.yml
+++ b/todo-app/todo-ui/docker-compose.override.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   nginx:
     image: 'nginx:1.13.7'
-    command: /bin/bash -c "envsubst '$$AZURE_APP_ID $$IS_TEST_MODE' < /etc/nginx/conf.d/default.conf.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
+    command: /bin/bash -c "envsubst '$$AZURE_APP_ID $$IS_TEST_MODE $$AZURE_AD_TENANT' < /etc/nginx/conf.d/default.conf.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
     ports:
       - '80:80'
     volumes:
@@ -25,7 +25,7 @@ services:
       SPRING_LOG_LEVEL: INFO
       APP_LOG_LEVEL: DEBUG
       AZURE_APP_ID: '${AZURE_APP_ID}'
-      AD_IDENTITY_META_DATA_URL: 'https://login.microsoftonline.com/architech.onmicrosoft.com/v2.0/.well-known/openid-configuration='
+      AD_IDENTITY_META_DATA_URL: '${AZURE_IDENTITY_META_DATA:-https://login.microsoftonline.com/architech.onmicrosoft.com/v2.0/.well-known/openid-configuration}'
       AZURE_CLIENT_SECRET: '${AZURE_CLIENT_SECRET}'
       IS_TEST_MODE: '${IS_TEST_MODE:-false}'
       USER_API_BASE_URL: http://user-api:8082
@@ -42,7 +42,7 @@ services:
       IS_TEST_MODE: '${IS_TEST_MODE:-false}'
       MONGODB_URL: 'mongodb://user-api-mongodb:27017/user-api'
       LOG_LEVEL: info
-      AZURE_IDENTITY_META_DATA: 'https://login.microsoftonline.com/architech.onmicrosoft.com/v2.0/.well-known/openid-configuration'
+      AZURE_IDENTITY_META_DATA: '${AZURE_IDENTITY_META_DATA:-https://login.microsoftonline.com/architech.onmicrosoft.com/v2.0/.well-known/openid-configuration}'
       AZURE_APP_ID: '${AZURE_APP_ID}'
 volumes:
   todo-app-data:
