--- a/todo-app/todo-api-java/docker-compose.override.yml
+++ b/todo-app/todo-api-java/docker-compose.override.yml
@@ -17,11 +17,11 @@ services:
     ports:
       - '8082:8082'
     environment:
-      IS_TEST_MODE: '${TEST_MODE:-false}'
+      IS_TEST_MODE: '${IS_TEST_MODE:-false}'
       MONGODB_URL: 'mongodb://user-api-mongodb:27017/user-api'
       LOG_LEVEL: info
-      AZURE_IDENTITY_META_DATA: 'https://login.microsoftonline.com/architech.onmicrosoft.com/v2.0/.well-known/openid-configuration'
-      AZURE_CLIENT_ID: '${AZURE_APP_ID}'
+      AZURE_IDENTITY_META_DATA: '${AZURE_IDENTITY_META_DATA:-https://login.microsoftonline.com/architech.onmicrosoft.com/v2.0/.well-known/openid-configuration}'
+      AZURE_APP_ID: '${AZURE_APP_ID}'
 volumes:
   todo-app-data:
     external: false
