Fixing AD on Helm

--- a/helm/architech/todo-app/templates/ui-deployments.yaml
+++ b/helm/architech/todo-app/templates/ui-deployments.yaml
@@ -18,3 +18,25 @@ spec:
           image: {{.Values.WebUI.Image}}:{{.Values.WebUI.ImageTag}}
           ports:
             - containerPort: {{.Values.WebUI.ContainerPort}}
+          env:
+            - name: IS_TEST_MODE
+              valueFrom:
+                configMapKeyRef:
+                  name: {{.Values.WebUI.ConfigName}}
+                  key: is_test_mode
+            - name: AZURE_CLIENT_SECRET
+              valueFrom:
+                secretKeyRef:
+                  name: {{.Values.WebUI.SecretName}}
+                  key: azure_client_secret
+            - name: AZURE_APP_ID
+              valueFrom:
+                secretKeyRef:
+                  name: {{.Values.WebUI.SecretName}}
+                  key: azure_app_id
+            - name: AZURE_AD_TENANT
+              valueFrom:
+                secretKeyRef:
+                  name: {{.Values.WebUI.SecretName}}
+                  key: ui_ad_identity
+                
