--- a/helm/architech/todo-app/values.yaml
+++ b/helm/architech/todo-app/values.yaml
@@ -9,22 +9,24 @@ General:
   Environment: prod
   NameSpace: todoapp
   IsTesting: false
-  LogLevel: INFO
+  LogLevel: DEBUG
 
 WebUI:
   Name: web-ui
   ServiceName: todo-webui-service
   Image: "architechbootcamp/todo-ui"
-  ImageTag: "v0.4"
+  ImageTag: "v0.5"
   Replicas: 1
   ServicePort: 80
   ContainerPort: 80
+  ConfigName: webui-config
+  SecretName: todoapp-secrets
 
 TodoAPI:
   Name: todo-api
   ServiceName: todo-api
   Image: "architechbootcamp/todo-api"
-  ImageTag: "v0.4"
+  ImageTag: "v0.5"
   Replicas: 1
   ServicePort: 8080
   ContainerPort: 8080
@@ -43,7 +45,7 @@ UserAPI:
   Name: user-api
   ServiceName: user-api
   Image: "architechbootcamp/user-api"
-  ImageTag: "v0.4"
+  ImageTag: "v0.5"
   Replicas: 1
   ServicePort: 8081
   ContainerPort: 8080
