--- a/platform/azure-build-server/ansible/roles/configure-jenkins/tasks/main.yml
+++ b/platform/azure-build-server/ansible/roles/configure-jenkins/tasks/main.yml
@@ -41,6 +41,16 @@
     jenkins_sonar_token: (json_response.content|from_json)['token']
   when: (token_search_response.content.find(jenkins_sonar_token_name) == -1)
 
+- name: Copy Jenkins configuration
+  become: yes
+  template:
+    src: config.xml.j2
+    dest: /var/lib/jenkins/config.xml
+    owner: jenkins
+    group: jenkins
+    backup: yes
+  when: (token_search_response.content.find(jenkins_sonar_token_name) == -1)
+
 - name: Copy Jenkins Sonar plugin configuration
   become: yes
   template:
