--- a/platform/azure-build-server/ansible/roles/nginx/templates/nginx.conf
+++ b/platform/azure-build-server/ansible/roles/nginx/templates/nginx.conf
@@ -46,8 +46,13 @@ http {
 
         location / {
             proxy_redirect off;
-            proxy_set_header Host $host;
-            proxy_pass http://127.0.0.1:8080/;
+            proxy_set_header    Host $host;
+            proxy_set_header    X-Real-IP $remote_addr;
+            proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header    X-Forwarded-Proto $scheme;
+
+            proxy_pass          http://127.0.0.1:8080;
+            proxy_read_timeout  90;
         }
 
         location /sonar {
