--- a/todo-app/todo-api-java/Jenkinsfile
+++ b/todo-app/todo-api-java/Jenkinsfile
@@ -72,14 +72,14 @@ node {
         try {
             echo "Building Testing container"
             sh "echo $PROJECT_PATH"
-            sh "docker-compose -f $PROJECT_PATH/docker-compose.yml -f $PROJECT_PATH/docker-compose.test.yml -p $projectName build"
+            sh "/usr/local/bin/docker-compose -f $PROJECT_PATH/docker-compose.yml -f $PROJECT_PATH/docker-compose.test.yml -p $projectName build"
 
             echo "Starting integration tests"
-            sh "docker-compose -f $PROJECT_PATH/docker-compose.yml -f $PROJECT_PATH/docker-compose.test.yml -p $projectName run -e FAIL_TESTS=false todo-api-test"
+            sh "/usr/local/bin/docker-compose -f $PROJECT_PATH/docker-compose.yml -f $PROJECT_PATH/docker-compose.test.yml -p $projectName run -e FAIL_TESTS=false todo-api-test"
         } finally {
             echo "Shutting down docker-compose environment"
             try {
-                sh "docker-compose -f $PROJECT_PATH/docker-compose.yml -f $PROJECT_PATH/docker-compose.test.yml -p $projectName down"
+                sh "/usr/local/bin/docker-compose -f $PROJECT_PATH/docker-compose.yml -f $PROJECT_PATH/docker-compose.test.yml -p $projectName down"
             } catch (error) {
                 echo "Error shutting down docker-compose: ${error}"
             }
