Fixed some minor config issues that were causing big problems
Issues fixed: editorconfig's newlines on end of files was causing problems with helm secrets since they weren't trimmed. Wrong port was configured in helm for user-api container. Wrong protocol used when referencing the user-api service from the todo-api.

--- a/helm/architech/todo-app/templates/todo-config.yaml
+++ b/helm/architech/todo-app/templates/todo-config.yaml
@@ -8,6 +8,6 @@ data:
   is_test_mode: "{{.Values.General.IsTesting}}"
   app_log_level: {{.Values.General.LogLevel}}
   spring_log_level: {{.Values.General.LogLevel}}
-  allowed_origins: "*" 
-  user_api_url: {{.Values.UserAPI.ServiceName}}:{{.Values.UserAPI.ServicePort}}
+  allowed_origins: "*"
+  user_api_url: "http://{{.Values.UserAPI.ServiceName}}:{{.Values.UserAPI.ServicePort}}"
 
