--- a/todo-app/Jenkinsfile
+++ b/todo-app/Jenkinsfile
@@ -14,8 +14,6 @@
 
 // Major.minor version
 PROJECT_VERSION = '1.0'
-PROJECT_IMAGE_NAME = 'architechbootcamp/todo-api'
-PROJECT_PATH = 'todo-app/todo-api-java'
 DEPLOYMENT_NAME = 'todo-api'
 QA_NAMESPACE = 'qa-env'
 PROD_NAMESPACE = 'prod-env'
@@ -42,52 +40,26 @@ node {
                 returnStdout: true
         ).trim()
 
-        GIT_REVISION_COUNT = sh (
-            script: 'git rev-list HEAD --count',
-            returnStdout:true
-        ).trim()
-
         echo "Checked out git commit ${GIT_REVISION}"
 
-        // Declare versions to use in tags later on.
-        IMAGE_SEMVER = "${PROJECT_VERSION}.${GIT_REVISION_COUNT}"
-        IMAGE_FULL_VERSION = "${IMAGE_SEMVER}_${GIT_REVISION}"
-
         OLD_IMAGE_VERSION_QA = getCurrentDeploymentVersion(QA_NAMESPACE)
-    }
-    stage('Test') {
-        def projectName = "todoapi${env.BUILD_NUMBER}"
-
-        try {
-            echo "Building Testing container"
-            sh "echo $PROJECT_PATH"
-            sh "/usr/local/bin/docker-compose -f $PROJECT_PATH/docker-compose.yml -f $PROJECT_PATH/docker-compose.test.yml -p $projectName build"
-
-            echo "Starting integration tests"
-            sh "/usr/local/bin/docker-compose -f $PROJECT_PATH/docker-compose.yml -f $PROJECT_PATH/docker-compose.test.yml -p $projectName run -e FAIL_TESTS=false todo-api-test"
-        } finally {
-            echo "Shutting down docker-compose environment"
-            try {
-                sh "/usr/local/bin/docker-compose -f $PROJECT_PATH/docker-compose.yml -f $PROJECT_PATH/docker-compose.test.yml -p $projectName down"
-            } catch (error) {
-                echo "Error shutting down docker-compose: ${error}"
-            }
-        }
+        // OLD_IMAGE_VERSION_PROD = getCurrentDeploymentVersion(PROD_NAMESPACE)
     }
 
-    stage('Build') {
-        echo "Building image ${PROJECT_IMAGE_NAME}"
-        buildEnv = docker.build(PROJECT_IMAGE_NAME,PROJECT_PATH)
+    stage('Param Testing') {
+        echo "imageName: ${imageName}"
+        echo "imageVersion: ${imageVersion}"
     }
+/*
+    stage('Deploy to QA') {
+        input 'Push to QA?'
+        //TODO: Push to production
+        OLD_IMAGE_VERSION_QA = getCurrentDeploymentVersion(QA_NAMESPACE)
 
-    stage('QA Image Push') {
-        echo "Pushing QA tags of image to docker registry"
-        docker.withRegistry("${REGISTRY_URL}", 'docker-hub-credentials') {
-            QA_IMAGE_FULL_VERSION = "qa_${IMAGE_FULL_VERSION}"
-            buildEnv.push(QA_IMAGE_FULL_VERSION)
-            buildEnv.push("qa_${IMAGE_SEMVER}")
-            buildEnv.push("qa_latest")
-        }
+        deployImage(
+            imageTag: "${IMAGE_FULL_VERSION}",
+            namespace: "${QA_NAMESPACE}"
+        )
     }
 
     stage('QA Test') {
@@ -99,7 +71,7 @@ node {
                         string(name: 'imageVersion', value: QA_IMAGE_FULL_VERSION)
                 ]
 
-    }
+    }*/
 /*
     stage('Prod Image Push') {
         echo "Pushing Production-ready tags to docker registry"
