--- a/todo-app/todo-api-java/Jenkinsfile
+++ b/todo-app/todo-api-java/Jenkinsfile
@@ -96,7 +96,9 @@ node {
             parameters:
                 [
                         string(name: 'imageName', value: PROJECT_IMAGE_NAME),
-                        string(name: 'imageVersion', value: QA_IMAGE_FULL_VERSION)
+                        string(name: 'imageVersion', value: QA_IMAGE_FULL_VERSION),
+                        string(name: 'semVersion', value: IMAGE_SEMVER),
+                        string(name: 'deploymentName', value: DEPLOYMENT_NAME)
                 ]
 
     }
