Ignoring ansible retry file

--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,5 @@ Thumbs.db
 !platform/azure-build-server/keys/README.md
 platform/azure-build-server/keys/*
 platform/azure-build-server/ansible/hosts.ini
+*.retry
 
