Updated ansible tasks

--- a/platform/azure-build-server/ansible/roles/docker/tasks/main.yml
+++ b/platform/azure-build-server/ansible/roles/docker/tasks/main.yml
@@ -42,6 +42,8 @@
   become: yes
   shell: curl -L https://github.com/docker/compose/releases/download/{{ docker_compose_version }}/docker-compose-`uname -s`-`uname -m` -o /usr/local/bin/docker-compose
 
-- name: Set docker compose as executable
+- name: Set docker-compose as executable (adding +x)
   become: yes
-  shell: chmod +x /usr/local/bin/docker-compose
+  file:
+    dest: /usr/local/bin/docker-compose
+    mode: a+x
