Updated todo-api and qa pipelines

--- a/todo-app/Jenkinsfile
+++ b/todo-app/Jenkinsfile
@@ -13,8 +13,8 @@
 */
 
 // Major.minor version
-PROJECT_VERSION = '1.0'
-DEPLOYMENT_NAME = 'todo-api'
+//PROJECT_VERSION = '1.0'
+//DEPLOYMENT_NAME = 'todo-api'
 QA_NAMESPACE = 'qa-env'
 PROD_NAMESPACE = 'prod-env'
 REGISTRY_URL = 'https://igortestacsprod.azurecr.io'
