--- a/todo-app/user-api/Jenkinsfile
+++ b/todo-app/user-api/Jenkinsfile
@@ -12,13 +12,16 @@
   - `CleanWorkspace` : Boolean. Default to unchecked.
 */
 
-node {
+// Major.minor version
+PROJECT_VERSION = '1.0'
+PROJECT_IMAGE_NAME = 'architechbootcamp/user-api'
+PROJECT_PATH = 'todo-app/user-api'
+DEPLOYMENT_NAME = 'user-api'
+QA_NAMESPACE = 'qa-env'
+PROD_NAMESPACE = 'prod-env'
+REGISTRY_URL = 'https://igortestacs.azurecr.io'
 
-    // Major.minor version
-    final PROJECT_VERSION = '1.0'
-    final PROJECT_IMAGE_NAME = 'architechbootcamp/user-api'
-    final PROJECT_PATH = 'todo-app/user-api'
-    final DEPLOYMENT_NAME = 'user-api'
+node {
 
     def buildEnv;
 
@@ -48,6 +51,8 @@ node {
         echo "Checked out git commit ${GIT_REVISION}"
 
         // Desclare versions to use in tags later on.
+        PROJECT_VERSION = getAppVersion()
+
         IMAGE_SEMVER = "${PROJECT_VERSION}.${GIT_REVISION_COUNT}"
         IMAGE_FULL_VERSION = "${IMAGE_SEMVER}_${GIT_REVISION}"
     }
@@ -59,7 +64,7 @@ node {
 
     stage('QA Image Push') {
         echo "Pushing QA tags of image to docker registry"
-        docker.withRegistry('https://registry.hub.docker.com', 'docker-hub-credentials') {
+        docker.withRegistry("${REGISTRY_URL}", 'docker-hub-credentials') {
             QA_IMAGE_FULL_VERSION = "qa_${IMAGE_FULL_VERSION}"
             buildEnv.push(QA_IMAGE_FULL_VERSION)
             buildEnv.push("qa_${IMAGE_SEMVER}")
@@ -69,16 +74,18 @@ node {
 
     stage('QA Test') {
         echo "Spawning Job to run functional testing on all components in QA environment"
-
-        build job: 'QA-Tests',
+        build job: 'QA-Prod-Pipeline',
             parameters:
                 [
-                    string(name: 'imageName', value: PROJECT_IMAGE_NAME),
-                    string(name: 'imageVersion', value: QA_IMAGE_FULL_VERSION)
+                        string(name: 'imageName', value: PROJECT_IMAGE_NAME),
+                        string(name: 'imageVersion', value: QA_IMAGE_FULL_VERSION),
+                        string(name: 'semVersion', value: IMAGE_SEMVER),
+                        string(name: 'deploymentName', value: DEPLOYMENT_NAME),
+                        string(name: 'projectPath', value: PROJECT_PATH)
                 ]
 
     }
-
+/*
     stage('Prod Image Push') {
         echo "Pushing Production-ready tags to docker registry"
         docker.withRegistry('https://registry.hub.docker.com', 'docker-hub-credentials') {
@@ -103,5 +110,23 @@ node {
         input 'Roll back Production?'
         sh "/usr/local/bin/kubectl --context=${PROD_KUBECTL_CONTEXT} set image deployment/${DEPLOYMENT_NAME} ${DEPLOYMENT_NAME}=${PROJECT_IMAGE_NAME}:${OLD_IMAGE_VERSION_PROD} --namespace=qa-env"
     }
+*/
+}
 
+def deployImage(Map attrs) {
+    sh("/usr/local/bin/kubectl set image deployment/${DEPLOYMENT_NAME} ${DEPLOYMENT_NAME}=${PROJECT_IMAGE_NAME}:${attrs.imageTag} --namespace=${attrs.namespace}")
+}
+
+def getCurrentDeploymentVersion(String namespace) {
+    return sh(
+        script: "/usr/local/bin/kubectl get deployment/${DEPLOYMENT_NAME} --namespace=${namespace} -o wide | awk '{ if (NR!=1) {print \$8}}' | cut -d ':' -f 2",
+        returnStdout: true
+    ).trim()
+}
+
+def getAppVersion() {
+    return sh(
+        script: "cat ${PROJECT_PATH}/VERSION",
+        returnStdout: true
+    ).trim()
 }
