--- a/todo-app/todo-ui/Jenkinsfile
+++ b/todo-app/todo-ui/Jenkinsfile
@@ -16,7 +16,7 @@
 PROJECT_VERSION = '1.0'
 PROJECT_IMAGE_NAME = 'architechbootcamp/todo-ui'
 PROJECT_PATH = 'todo-app/todo-ui'
-DEPLOYMENT_NAME = 'web-ui'
+DEPLOYMENT_NAME = 'todo-ui'
 QA_NAMESPACE = 'qa-env'
 PROD_NAMESPACE = 'prod-env'
 REGISTRY_URL = 'https://igortestacs.azurecr.io'
