Using docker hub now

--- a/todo-app/todo-api-java/Jenkinsfile
+++ b/todo-app/todo-api-java/Jenkinsfile
@@ -19,7 +19,7 @@ PROJECT_PATH = 'todo-app/todo-api-java'
 DEPLOYMENT_NAME = 'todo-api'
 QA_NAMESPACE = 'qa-env'
 PROD_NAMESPACE = 'prod-env'
-REGISTRY_URL = 'https://igortestacs.azurecr.io'
+REGISTRY_URL = 'https://registry.hub.docker.com'
 
 node {
 
