--- a/todo-app/Jenkinsfile
+++ b/todo-app/Jenkinsfile
@@ -17,7 +17,7 @@
 //DEPLOYMENT_NAME = 'todo-api'
 QA_NAMESPACE = 'qa-env'
 PROD_NAMESPACE = 'prod-env'
-REGISTRY_URL = 'https://igortestacsprod.azurecr.io'
+REGISTRY_URL = 'https://registry.hub.docker.com'
 
 node {
 
