Added new env variables

--- a/helm/architech/todo-app/templates/ui-deployments.yaml
+++ b/helm/architech/todo-app/templates/ui-deployments.yaml
@@ -39,4 +39,14 @@ spec:
                 secretKeyRef:
                   name: {{.Values.WebUI.SecretName}}
                   key: ui_ad_identity
+            - name: REACT_APP_CLIENT_ID
+              valueFrom:
+                secretKeyRef:
+                  name: {{.Values.WebUI.SecretName}}
+                  key: ui_react_app_id
+            - name: REACT_APP_TENANT
+              valueFrom:
+                secretKeyRef:
+                  name: {{.Values.WebUI.SecretName}}
+                  key: ui_react_ad_identity
 
