Fixed User-API ports and set correct image tags

--- a/helm/architech/todo-app/values-qa.yaml
+++ b/helm/architech/todo-app/values-qa.yaml
@@ -15,7 +15,7 @@ WebUI:
   Name: todo-ui
   ServiceName: todo-webui-service
   Image: "architechbootcamp/todo-ui"
-  ImageTag: "v0.4"
+  ImageTag: "qa_latest"
   Replicas: 1
   ServicePort: 80
   ContainerPort: 80
@@ -24,7 +24,7 @@ TodoAPI:
   Name: todo-api
   ServiceName: todo-api
   Image: "architechbootcamp/todo-api"
-  ImageTag: "v0.4"
+  ImageTag: "qa_latest"
   Replicas: 1
   ServicePort: 8080
   ContainerPort: 8080
@@ -43,10 +43,10 @@ UserAPI:
   Name: user-api
   ServiceName: user-api
   Image: "architechbootcamp/user-api"
-  ImageTag: "v0.4"
+  ImageTag: "qa_latest"
   Replicas: 1
-  ServicePort: 8081
-  ContainerPort: 8080
+  ServicePort: 8082
+  ContainerPort: 8082
   ConfigName: userapi-config
   SecretName: todoapp-secrets
 
