--- a/platform/azure-build-server/ansible/build-server.yml
+++ b/platform/azure-build-server/ansible/build-server.yml
@@ -15,7 +15,7 @@
       prompt: "Enter admin password:"
       private: yes
   pre_tasks:
-  # These two pre_tasks are required to be able to install newer version on MySQL on CentOS 7
+  # These two pre_tasks are required to be able to install newer version of MySQL on CentOS 7
   # since SonarQube requires MySQL 5.6+ and CentOS 7 comes with MySQL 5.5
     - name: Install the MySQL repo.
       become: yes
