--- a/helm/architech/todo-app/values.yaml
+++ b/helm/architech/todo-app/values.yaml
@@ -7,7 +7,7 @@
 General:
   Version : 1.0
   Environment: prod
-  NameSpace: todoapp
+  NameSpace: todo-app
   IsTesting: false
   LogLevel: DEBUG
 
