--- a/configmaps/configmap-from-envFrom.yml
+++ b/configmaps/configmap-from-envFrom.yml
@@ -1,3 +1,18 @@
+# 1) Deploy the configmap and this manifest
+#
+# kubectl create -f app-properties.yml
+# kubectl create -f configmap-from-envFrom.yml
+#
+# 2) Exec into the pod
+#
+# kubectl exec -ti cm-envfrom -- sh
+#
+# 3) In the shell:
+#
+# env
+#
+# You will see the LOG_LEVEL environment variable defined.
+
 apiVersion: v1
 kind: Pod
 metadata:
