--- a/ingress/ingress-controller.yml
+++ b/ingress/ingress-controller.yml
@@ -10,9 +10,9 @@ spec:
     app: nginx-ingress
   type: NodePort
   ports:
-    - port: 8080
+    - port: 80
       protocol: TCP
-      targetPort: 8080
+      targetPort: 80
 ---
 apiVersion: extensions/v1beta1
 kind: Deployment
@@ -21,7 +21,7 @@ metadata:
   labels:
     app: nginx-ingress
 spec:
-  replicas: 2
+  replicas: 1
   strategy:
     rollingUpdate:
       maxSurge: 1
@@ -49,12 +49,16 @@ spec:
           initialDelaySeconds: 10
           timeoutSeconds: 1
         ports:
-        - containerPort:  8080
-        #The args and environment variables are required by
-        #this controller implementation
+        - containerPort: 80
+        # The args and environment variables are required by
+        # this controller implementation
+        # See https://github.com/kubernetes/ingress-nginx/blob/master/docs/user-guide/cli-arguments.md
+        - containerPort: 10254
         args:
         - /nginx-ingress-controller
         - --default-backend-service=$(POD_NAMESPACE)/default-http-backend
+        - --force-namespace-isolation
+        - --watch-namespace=$(POD_NAMESPACE)
         env:
         - name: POD_NAMESPACE
           valueFrom:
@@ -73,7 +77,7 @@ metadata:
     app: default-http-backend
 spec:
   ports:
-  - port: 8080
+  - port: 80
     targetPort: 8080
   selector:
     app: default-http-backend
