--- a/rbac/minikube-rbac-privileges.yml
+++ b/rbac/minikube-rbac-privileges.yml
@@ -10,7 +10,7 @@ metadata:
 rules:
   - apiGroups: ["*"]
     resources: ["*"]
-    verbs: ["create, update"]
+    verbs: ["create", "update", "delete", "patch"]
   - nonResourceURLs: ["*"]
     verbs: ["*"]
 
