--- a/rbac/production-rolebinding.yml
+++ b/rbac/production-rolebinding.yml
@@ -1,3 +1,8 @@
+# RoleBindings grant the privileges defined in a given role
+# to a subject (e.g. user) in a given namespace.  RoleBindings
+# grant privileges at the namespace level.  To grant privileges at
+# the cluster level, use ClusterRoleBindings
+
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
