--- a/rbac/qa-role.yml
+++ b/rbac/qa-role.yml
@@ -1,3 +1,7 @@
+# Role and ClusterRole objects defines privileges - actions you can perform
+# on a given resource within a given apiGroup.
+# They are defined locally at the namespace level (Role)
+# or globally at the cluster level (ClusterRole)
 kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
